INCLUDES += -I$(srcdir)/../arcemu-shared

bin_PROGRAMS = arcemu-world

arcemu_world_SOURCES = \
    CollideInterface.cpp \
    CollideInterface.h \
    VoiceChatClientSocket.cpp \
    VoiceChatClientSocket.h \
    VoiceChatHandler.cpp \
    VoiceChatHandler.h \
    DayWatcherThread.cpp \
    DayWatcherThread.h \
    CommonScheduleThread.cpp \
    CommonScheduleThread.h \
    ArenaTeam.cpp \
    ArenaTeam.h \
    DatabaseCleaner.cpp \
    DatabaseCleaner.h \
    ObjectStorage.cpp \
    ObjectStorage.h \
    AddonMgr.cpp \
    AddonMgr.h \
    AIInterface.cpp \
    AIInterface.h \
    AlteracValley.cpp \
    AlteracValley.h \
    ArathiBasin.cpp \
    ArathiBasin.h \
    AreaTrigger.cpp \
    AreaTrigger.h \
    Arenas.cpp \
    Arenas.h \
    AuctionHouse.cpp \
    AuctionHouse.h \
    AuctionMgr.cpp \
    AuctionMgr.h \
    BattlegroundCommands.cpp \
    BattlegroundHandler.cpp \
    BattlegroundMgr.cpp \
    BattlegroundMgr.h \
    CellHandler.h \
    Channel.cpp \
    Channel.h \
    ChannelHandler.cpp \
    ChannelMgr.h \
    CharacterHandler.cpp \
    Chat.cpp \
    Chat.h \
    ChatHandler.cpp \
    CombatHandler.cpp \
    Container.cpp \
    Container.h \
    Corpse.cpp \
    Corpse.h \
    Creature.cpp \
    Creature.h \
    debugcmds.cpp \
    DuelHandler.cpp \
    DynamicObject.cpp \
    DynamicObject.h \
    EventableObject.cpp \
    EyeOfTheStorm.cpp \
    EyeOfTheStorm.h \
    EventableObject.h \
    EventMgr.cpp \
    EventMgr.h \
    faction.h \
    faction.cpp \
    GameObject.cpp \
    GameObject.h \
    GMTicket.cpp \
    GMTicketCommands.cpp \
    Group.cpp \
    Group.h \
    GroupHandler.cpp \
    Guild.cpp \
    Guild.h \
    GuildHandler.cpp \
    HonorHandler.cpp \
    HonorHandler.h \
    InstanceCommands.cpp \
    Item.cpp \
    Item.h \
    ItemHandler.cpp \
    ItemInterface.cpp \
    ItemInterface.h \
    BufferPools/BufferPools.cpp \
    BufferPools/BufferPools.h \
    ItemPrototype.h \
    Level0.cpp \
    Level1.cpp \
    Level2.cpp \
    Level3.cpp \
    LfgHandler.cpp \
    LfgMgr.cpp \
    LfgMgr.h \
    LootMgr.cpp \
    LootMgr.h \
    LocalizationMgr.cpp \
    LocalizationMgr.h \
    LogonCommClient.cpp \
    LogonCommHandler.h \
    LogonCommClient.h \
    LogonCommHandler.cpp \
    MailSystem.cpp \
    MailSystem.h \
    MapCell.cpp \
    MapCell.h \
    Map.cpp \
    Map.h \
    MapScriptInterface.cpp \
    MapScriptInterface.h \
    MapMgr.cpp \
    MapMgr.h \
    MiscHandler.cpp \
    MiscHandler.h \
    MovementHandler.cpp \
    NameTables.h \
    NPCHandler.cpp \
    NPCHandler.h \
    Object.cpp \
    Object.h \
    ObjectMgr.cpp \
    ObjectMgr.h \
    Opcodes.cpp \
    Opcodes.h \
    Pet.cpp \
    Pet.h \
    PetHandler.cpp \
    Player.cpp \
    Player.h \
    PlayerPacketWrapper.cpp \
    QueryHandler.cpp \
    Quest.cpp \
    Quest.h \
    QuestHandler.cpp \
    QuestMgr.cpp \
    QuestMgr.h \
    QuestCommands.cpp \
    RaidHandler.cpp \
    RecallCommands.cpp \
    ReputationHandler.cpp \
    ScriptMgr.cpp \
    ScriptMgr.h \
    Skill.h \
    SkillHandler.cpp \
    SocialHandler.cpp \
    SpeedDetector.cpp \
    SpeedDetector.h \
    SpellAuras.cpp \
    SpellAuras.h \
    SpellTarget.cpp \
    Spell.cpp \
    Spell.h \
    SpellEffects.cpp \
    SpellHandler.cpp \
    SpellFixes.cpp \
    Stats.h \
    Stats.cpp \
    StdAfx.cpp \
    StdAfx.h \
    TaxiHandler.cpp \
    TaxiMgr.cpp \
    TaxiMgr.h \
    TerrainMgr.cpp \
    TerrainMgr.h \
    TradeHandler.cpp \
    TransporterHandler.cpp \
    TransporterHandler.h \
    Unit.cpp \
    Unit.h \
    UpdateFields.h \
    UpdateMask.h \
    WarsongGulch.cpp \
    WarsongGulch.h \
    WayPoints.cpp \
    WeatherMgr.cpp \
    WeatherMgr.h \
    World.cpp \
    World.h \
    WorldCreator.cpp \
    WorldCreator.h \
    WorldSession.cpp \
    WorldSession.h \
    WorldSocket.cpp \
    WorldSocket.h \
    WorldRunnable.h \
    WorldRunnable.cpp \
    WordFilter.h \
    WordFilter.cpp \
	Main.cpp \
	Master.cpp \
	Master.h \
	CConsole.cpp \
	CConsole.h \
	BaseConsole.h \
	ConsoleCommands.cpp \
	ConsoleCommands.h \
	ConsoleListener.cpp
	
arcemu_world_LDADD = -lshared -lz -lpcre -lcollision

arcemu_world_LDFLAGS = -L$(srcdir)/../arcemu-shared \
               -L$(srcdir)/../../extras/collision/collision_dll \
               -L/usr/lib \
               @LIB_EXPORT@
