INCLUDES += -I$(srcdir)

noinst_LIBRARIES = libshared.a

libshared_a_SOURCES = \
    CThreads.cpp \
    CThreads.h \
    Log.cpp \
    MemoryLeaks.cpp \
    MersenneTwister.cpp \
    MersenneTwister.h \
    PreallocatedQueue.h \
    ByteBuffer.h \
    Common.h \
    Errors.h \
    Log.h \
    MemoryLeaks.h \
    Singleton.h \
    Threading.h \
    Timer.h \
    UnixThreading.h \
    Util.h \
    Util.cpp \
    WinThreading.h \
    WorldPacket.h \
    crc32.cpp \
    crc32.h \
    FastQueue.h \
    Threading/Mutex.cpp \
    Threading/ThreadPool.cpp \
    Storage.h \
    ascent_getopt.h \
    ascent_getopt.cpp \
    CrashHandler.h \
    CrashHandler.cpp \
    Auth/BigNumber.cpp \
    Auth/BigNumber.h \
    Auth/MD5.cpp \
    Auth/MD5.h \
    Auth/Sha1.cpp \
    Auth/Sha1.h \
    Auth/WowCrypt.cpp \
    Auth/WowCrypt.h \
    Config/Config.cpp \
    Config/Config.h \
    Config/ConfigEnv.h \
    Database/DBC.cpp \
    Database/Database.cpp \
    Database/DBC.h \
    Database/Database.h \
    Database/DBCStores.cpp \
    Database/DatabaseEnv.h \
    Database/DBCStores.h \
    Database/Field.h \
    Database/DataStore.h \
    Database/dbcfile.cpp \
    Database/dbcfile.h \
    Database/MySQLDatabase.cpp \
    Database/MySQLDatabase.h \
    Database/PostgresDatabase.cpp \
    Database/PostgresDatabase.h \
    Database/SQLiteDatabase.cpp \
    Database/SQLiteDatabase.h \
    Database/CreateInterface.cpp \
    Network/CircularBuffer.h \
    Network/CircularBuffer.cpp \
    Network/ListenSocketLinux.h \
    Network/ListenSocketFreeBSD.h \
    Network/Network.h \
    Network/Socket.cpp \
    Network/Socket.h \
    Network/SocketDefines.h \
    Network/SocketLinux.cpp \
    Network/SocketFreeBSD.cpp \
    Network/SocketMgrLinux.cpp \
    Network/SocketMgrLinux.h \
    Network/SocketMgrFreeBSD.cpp \
    Network/SocketMgrFreeBSD.h \
    Network/SocketOps.h \
    Network/SocketOpsLinux.cpp \
    Network/SocketOpsFreeBSD.cpp
    
