INCLUDES += -I$(srcdir)

bin_PROGRAMS = ascent-voicechat

ascent_voicechat_SOURCES = \
ascent_opcodes.h \
ascent_packet.h \
ascent_socket.c \
common.h \
configfile.c \
configfile.h \
launcher.c \
linkedlist.h \
log.c \
log.h \
mutex.h \
mutex.c \
network.h \
network_handlers.h \
network_handlers.c \
network_unixselect.c \
network_unixepoll.c \
network_unixkqueue.c \
voice_channel.c \
voice_channel.h \
voice_channelmgr.h \
voice_socket.c

