INCLUDES = -I$(top_srcdir)/src/arcemu-logonserver \
   -I$(top_srcdir)/src/arcemu-realmserver -I$(top_srcdir)/src/arcemu-shared -I$(top_srcdir)/src/arcemu-voicechat \
   -I$(top_srcdir)/src/arcemu-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libBattlegrounds.la

libBattlegrounds_la_SOURCES = AlteracValley.cpp AlteracValley.h \
ArathiBasin.cpp ArathiBasin.h \
EyeOfTheStorm.cpp EyeOfTheStorm.h \
StrandOfTheAncient.cpp StrandOfTheAncient.h \
WarsongGulch.cpp WarsongGulch.h 